Se modifica una parte de la pagina

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="separador">
             <div class="contenido-separador contenedor">
                 <h2>La mejor comida para empezar el dia</h2>
-                <p>Empieza tu día comiedo deliciosa comida o un café con medialunas</p>
+                <p>Empieza tu día comiendo delicioso o tomando un café con medialunas</p>
                 <a href="#" class="btn btn-verde">Encargar</a>
             </div>
             </div>
@@ -227,8 +227,8 @@
                 <h2>Nuestro <span class="azul">Chef</span></h2>
             <div class="contenido-chef">
             <div class="texto-chef">
-                <h3>La exelencia está en la diversidad y el modo de progresar
-                        es conocer y comparar las diversidades de productos, culturas y
+                <h3>La excelencia está en la diversidad y el modo de progresar
+                        es conocer y comparar la variedad de productos, culturas y
                         técnicas
                 </h3>
                 <p>Es el Chef fundador del movimiento de "la nueva era de la cocina". Nació en Buenos Aires (Argentina). Se inicia en la profesión a los 16 años en el Hotel Andino. 
